[workspace]
members = ["packages/*"]
resolver = "2"

[workspace.package]
authors = ["Tomasz Kurcz", "Confio GmbH"]
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/storey"
homepage = "https://cosmwasm.com/"
categories = ["cryptography::cryptocurrencies"]
keywords = ["CosmWasm"]

[workspace.dependencies]
storey = { path = "packages/storey", version = "0.1" }
storey-encoding = { path = "packages/storey-encoding", version = "0.1" }
storey-storage = { path = "packages/storey-storage", version = "0.1" }
