[package]
name = "cw-storey"
description = "storey integration for CosmWasm"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
version = "0.1.0"
edition = "2021"
license = { workspace = true }

[dependencies]
rmp-serde = "1"
cosmwasm-std = "2"
serde = "1"

storey = { workspace = true }
